# AviSynth-vsTTempSmooth

./: .editorconfig  CHANGELOG.md  CMakeLists.txt  README.md
src/: vsTTempSmooth.cpp  vsTTempSmooth.h  vsTTempSmooth.rc  vsTTempSmooth_AVX2.cpp  vsTTempSmooth_AVX512.cpp  vsTTempSmooth_SSE2.cpp  vsTTempSmooth_pmode1_AVX2.cpp  vsTTempSmooth_pmode1_AVX512.cpp
src/VCL2/: vectorf128.h  vectorf256.h  vectori128.h  vectori256.h  vectori512.h
